fix: mobile menu horizontal scroll

--- a/app/assets/css/style.css
+++ b/app/assets/css/style.css
@@ -1,3 +1,4 @@
+@charset "UTF-8";
 @import url("https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;500;700;900&display=swap");
 header {
   position: absolute;
@@ -1041,6 +1042,29 @@ ul {
       display: none; }
     .header-row_menu__drop-down_btn {
       position: relative; }
+      .header-row_menu__drop-down_btn.open:after {
+        content: "Назад";
+        display: -webkit-box;
+        display: -webkit-flex;
+        display: -ms-flexbox;
+        display: flex;
+        -webkit-box-align: center;
+        -webkit-align-items: center;
+            -ms-flex-align: center;
+                align-items: center;
+        -webkit-box-pack: center;
+        -webkit-justify-content: center;
+            -ms-flex-pack: center;
+                justify-content: center;
+        position: absolute;
+        z-index: 2;
+        top: -2px;
+        left: -2px;
+        right: -2px;
+        bottom: -2px;
+        background: #EAD103;
+        color: #212121;
+        border-radius: 25px; }
     .header .mobile-header {
       display: -webkit-box;
       display: -webkit-flex;
@@ -1121,10 +1145,8 @@ ul {
               transform: translateX(100%);
       -webkit-transition: 250ms cubic-bezier(0.4, 0, 0.2, 1);
       -o-transition: 250ms cubic-bezier(0.4, 0, 0.2, 1);
-      transition: 250ms cubic-bezier(0.4, 0, 0.2, 1);
-      overflow-y: scroll; }
+      transition: 250ms cubic-bezier(0.4, 0, 0.2, 1); }
       .header .mobile-menu .header-row_menu {
-        position: relative;
         width: 100%;
         -webkit-box-orient: vertical;
         -webkit-box-direction: normal;
@@ -1145,10 +1167,12 @@ ul {
           margin-bottom: 20px;
           width: 100%; }
           .header .mobile-menu .header-row_menu__drop-down_menu {
-            width: 380px;
-            top: 55px;
-            left: -30px;
+            width: 100%;
+            top: 90px;
+            bottom: 0;
+            left: 0;
             right: 0;
+            overflow-x: hidden;
             border-radius: 0;
             background: #212121;
             color: #fff; }
